gccida/g0/recog_26
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33567:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33568:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2b = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33580:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33588:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( x1a->fld[0].rtx, recog_data_0.operand[1]) ) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33594:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)&x1a[1], recog_data_0.operand[0]) ) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33606:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33607:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3a = (  struct rtx_def *)x2b[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33613:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33626:17: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[1] != 66 || *( _WORD *)recog_data_0.operand[2] != 66) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33626:61: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[1] != 66 || *( _WORD *)recog_data_0.operand[2] != 66) ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33640:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33641:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3c = (  struct rtx_def *)x2b[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33647:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33673:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33674:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3e = (  struct rtx_def *)x2b[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33680:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33711:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33712:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2c = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/insn-recog.c:33724:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_26/src/obj/insn-recog.o] Error 1
